@@ -2,11 +2,10 @@
 # pyqt_render_chain.py <Peter.Bienstman@gmail.com>
 #
 
-import sys
-
 from mnemosyne.libmnemosyne.filters.latex import Latex
 from mnemosyne.libmnemosyne.render_chain import RenderChain
 from mnemosyne.libmnemosyne.renderers.html_css import HtmlCss
+from mnemosyne.libmnemosyne.filters.furigana import Furigana
 from mnemosyne.libmnemosyne.filters.RTL_handler import RTLHandler
 #from mnemosyne.libmnemosyne.filters.html5_audio import Html5Audio
 #from mnemosyne.libmnemosyne.filters.html5_video import Html5Video
@@ -22,6 +21,6 @@ class PyQtRenderChain(RenderChain):
     id = "default"
     
     filters = [Latex, EscapeToHtml, ExpandPaths, QtAudio,
-        QtVideo, RTLHandler, NonLatinFontSizeIncrease]
+        QtVideo, RTLHandler, Furigana, NonLatinFontSizeIncrease]
     
     renderers = [HtmlCss]
